# BachelorThesis-RAGulator

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
backend/app/: server.py
backend/app/api/: deps.py  endpoints.py
backend/app/configs/: logging_config.json
backend/app/core/: logger.py
backend/app/db/: config.py  database.py
backend/app/models/: __init__.py  answer.py  answer_comment.py  base.py  chain.py  configuration.py  models.py  question.py  session.py
backend/app/schemas/: __init__.py  answer.py  answer_comment.py  base.py  chain.py  configuration.py  question.py  schemas.py  session.py
backend/app/services/: answer.py  base.py  chain.py  configuration.py  exceptions.py  logger.py  question.py  session.py
backend/chains/: complex_configurable_chain.py  configurable_temp_chain.py  simple_chain.py
backend/langserver/: server.py
backend/langserver/chains/: complex_configurable_chain.py  experimental_chain.py  simple_chain.py
backend/scripts/: db_init.sh
backend/src/: main.py
backend/src/app/: server.py
backend/src/chains/: config_chain.py  configurable_prompt_chain.py  simple_chain.py
backend/src/configs/: logging_config.json
backend/src/db/: __init__.py  config.py  database.py  models.py
backend/src/models/: chain_config.py
backend/src/routes/: chain_config_routes.py  extract_chain_config.py
backend/src/schemas/: answer_comments.py  answers.py  chain_evaluations.py  chains.py  configurations.py  questions.py  sessions.py
frontend/: .gitignore  (+10 more)
(+72 files in other folders)
