[project]
name = "RAGulator_backend"
version = "0.0.1"
description = "Backend for RAGulator, an evaluation tool for LCEL chains."
authors = [{ name = "Siddharth Khattar" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv==1.0.1",
    "fastapi==0.115.4",
    "uvicorn==0.32.0",
    "langchain==0.3.5",
    "langchain-community==0.3.3",
    "langchain-core==0.3.14",
    "langchain-openai==0.2.4",
    "openai==1.53.0",
    "langserve==0.3.0",
    "numpy==1.26.4",
    "faiss-cpu==1.9.0",
    "pydantic==2.9.2",
    "pydantic_core==2.23.4",
    "starlette==0.41.2",
    "sse-starlette==2.1.3",
]

[project.optional-dependencies]
dev = ["black"]

[project.scripts]
start = "uvicorn src.main:app --reload"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
